--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "tsc -w",
+    "dev": "nodemon dist/index.js",
+    "start": "node dist/index.js",
+    "start2": "ts-node src/index.ts",
+    "build": "tsc"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.12",
+    "@types/node": "^15.12.5",
+    "nodemon": "^2.0.9",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4"
+  },
+  "dependencies": {
+    "@sitespeed.io/throttle": "^0.5.4",
+    "awaitqueue": "^2.3.3",
+    "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
+    "debug": "^4.3.1",
+    "express": "^4.17.1",
+    "heapdump": "^0.3.15",
+    "mediasoup": "github:versatica/mediasoup#v3",
+    "pidusage": "^2.0.21",
+    "protoo-server": "^4.0.5"
+  }
 }
