--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.5",
+    "@types/protoo-server": "^4.0.1",
+    "@types/debug": "^4.1.5",
     "nodemon": "^2.0.9",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
